Cleanups and improvements

--- a/pattern/balanced-ecs-on-ec2-container-deployment-across-az/files/cluster.yml
+++ b/pattern/balanced-ecs-on-ec2-container-deployment-across-az/files/cluster.yml
@@ -9,7 +9,7 @@ Parameters:
     Description: VPC ID where the ECS cluster is launched
 
 Resources:
-  # ECS Resources
+  # Cluster that keeps track of container deployments
   ECSCluster:
     Type: AWS::ECS::Cluster
     Properties:
