--- a/pattern/ecs-ec2-capacity-provider-scaling/files/cluster-capacity-provider.yml
+++ b/pattern/ecs-ec2-capacity-provider-scaling/files/cluster-capacity-provider.yml
@@ -26,8 +26,7 @@ Parameters:
     Description: List of subnet IDs where the EC2 instances will be launched
 
 Resources:
-
-  # ECS Resources
+  # Cluster that keeps track of container deployments
   ECSCluster:
     Type: AWS::ECS::Cluster
     Properties:
