--- a/pattern/service-discovery-fargate-microservice-cloud-map/files/cluster.yml
+++ b/pattern/service-discovery-fargate-microservice-cloud-map/files/cluster.yml
@@ -7,14 +7,7 @@ Parameters:
     Description: The VPC that the service is running inside of
 
 Resources:
-  # This is authorizes ECS to manage resources on your
-  # account on your behalf. This role is likely already created on your account
-  # ECSRole:
-  #  Type: AWS::IAM::ServiceLinkedRole
-  #  Properties:
-  #    AWSServiceName: 'ecs.amazonaws.com'
-
-  # ECS Resources
+  # Cluster that keeps track of container deployments
   ECSCluster:
     Type: AWS::ECS::Cluster
     Properties:
