--- a/pattern/ecs-service-connect-aws-copilot/files/name/Dockerfile
+++ b/pattern/ecs-service-connect-aws-copilot/files/name/Dockerfile
@@ -1,10 +1,24 @@
-FROM public.ecr.aws/docker/library/node:18 AS build
+# Build stage, includings NPM and tools necessary for the build
+FROM public.ecr.aws/docker/library/node:20 as build
 WORKDIR /srv
-ADD package.json .
-RUN npm install
 
-FROM public.ecr.aws/docker/library/node:18-slim
+# Install dependencies based on the `package.json` and `package-lock.json`
+# files in the host folder
+RUN --mount=type=bind,source=package.json,target=package.json \
+    --mount=type=bind,source=package-lock.json,target=package-lock.json \
+    --mount=type=cache,target=/root/.npm \
+    npm ci --omit=dev
+
+
+# Production stage, only includes what is needed for production
+FROM public.ecr.aws/docker/library/node:20-slim
+
+ENV NODE_ENV production
+USER node
+
 COPY --from=build /srv .
 ADD . .
+
+# Specify the command to run when launching the container
 EXPOSE 3000
-CMD ["node", "index.js"]
+CMD node index.js
