--- a/pattern/split-traffic-between-ec2-fargate-with-cloudformation/files/service-across-ec2-and-fargate.yml
+++ b/pattern/split-traffic-between-ec2-fargate-with-cloudformation/files/service-across-ec2-and-fargate.yml
@@ -44,7 +44,7 @@ Resources:
           PortMappings:
             - ContainerPort: 3000
           Environment:
-            - Key: PORT
+            - Name: PORT
               Value: 3000
           LogConfiguration:
             LogDriver: 'awslogs'
